--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body{
 #welcome{
     background-color: aqua;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 28px;
+
 }
 #form{
     margin:auto;
@@ -15,25 +18,47 @@ body{
     margin-left: 10px;
 }
 
- .register, .login{
+.login{
 
     float: left;
     padding-top: 10px;
     background-color: aqua;
 }
-#register td, #login td{
+#login td{
     padding: 4px;
     padding-left: 25px;
+    font-size: 18x;
+    font-weight: bold;
     
 }
+#login #log_td{
+    text-align: center;
+    font-size: 20px;
+    width: 75px;
 
+}
+#login #password_login, #login #user_login{
+    font-size:16px;
+}
+.button, #log{
+    text-align: center;
+    font-size: 20px;
+    width: 75px;
 
-.button{
-    text-align: center;}
+}
 
 #container{
     margin:auto;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 50px;
+    margin-left: 25px;
+    margin-bottom: 75px;
+    font-size: 20px;
 
+}
+#image_1{
+    float: right;
+    width: 500px;
+    height: 400px;
+    margin-right: 350px;
+    
 }
